--- a/webroot/css/simulate_sail_event_dummy.css
+++ b/webroot/css/simulate_sail_event_dummy.css
@@ -104,6 +104,7 @@ li{
 
 .info-bar .counter{
 	text-align: right;
+	margin-top: 1px; /* fix chrome bug */
 	padding-left: 40px;
 	background: #fff;	
 	z-index: -1;
@@ -264,9 +265,9 @@ li{
 
 .boat-icon {
 	width: 50px;
-	height: 18px;
+	height: 17px;
 	background-image: url(../img/sail_event_v1/boat.png);
-	background-size: contain;
+	background-size: cover;
 	margin-top: -9px;
 	margin-left: -25px;
 	
@@ -277,6 +278,7 @@ li{
 	position: absolute;
 	display:inline-block;
 	top: -50px;
+	min-width: 135px;
 	margin-top: -12.5px;
 	margin-left: -35px;		
 	background: #fff;
@@ -304,6 +306,7 @@ li{
 	line-height: 24px;
 	padding: 0 15px 0 5px;
 	font-size: 12px;
+	float: right;
 }
 
 .position{
@@ -497,7 +500,7 @@ li{
 }
 
 #bouy-info ul li .name{
-	font-size: 14px;
+	font-size: 12px;
 }
 
 #bouy-info ul li .counter{
@@ -682,7 +685,6 @@ li{
 #bouy-counter{
 	position: fixed;
 	bottom: 190px;
-	background: #fff;
 	border-radius: 5px 0 0 5px;
 	overflow: hidden;	
 	left: calc( 50% + 300px );
