--- a/webroot/css/simulate_sail_event_dummy.css
+++ b/webroot/css/simulate_sail_event_dummy.css
@@ -119,12 +119,34 @@ li{
 	height: 100%;
 }
 
+#boat-container, #bouy-container,#waves-container,#height-line-container,#background-image{
+	/*-webkit-animation-name: zoom;
+ 	-webkit-animation-duration:35s;
+    -webkit-animation-timing-function: linear;*/
+}
+
+@-webkit-keyframes zoom {
+   0% {
+     transform: translateX(0px) scale(1); 
+   }
+   5% { 
+     transform: translateX(800px) scale(2); /* X should be multiplied with the scale factor */ 
+   }
+   
+    100% { 
+     transform: translateX(800px) scale(2); /* X should be multiplied with the scale factor */ 
+   }
+}
+
+
+
+
 #waves-container{
 	width: 200vw;
 	height: 200vh;
 	top: -50vh;
 	left: -50vw;
-	position: fixed;
+	position: absolute;
 }
 
 .wave{
@@ -180,17 +202,20 @@ li{
 
 #bouy-container{
 	z-index: 3;
+	position: absolute;
 	top: 0;
-	left: 0;	
+	left: 0;
+	height: 100%;
+	width: 100%;	
 }
 
 #boat-container{
 	z-index: 2;
-	position: fixed;
-	height: 100%;
-	width: 100%;
+	position: absolute;
 	top: 0;
 	left: 0;
+	height: 100%;
+	width: 100%;	
 }
 /*
 #bouy-0{
@@ -219,6 +244,8 @@ li{
 	position: absolute;
 	width: 20px;
 	height: 20px;
+	margin-top: -10px;
+	margin-left: -10px;
 	border-radius: 50%;
 	background-color: #ffc600;
 	color: #75652e;
@@ -248,6 +275,28 @@ li{
 	z-index: 3;
 }
 
+.bouy.active:before{
+	content: '';
+    position: absolute;
+    height: 500px;
+    width: 500px;
+    border: 3px dashed #fec835;
+    border-radius: 50%;
+    top: -243px;
+    left: -243px;
+    animation-name: spin;
+    animation-duration: 120s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    opacity: 0.6;
+
+}
+
+@keyframes spin {
+    from {transform:rotate(360deg);}
+    to {transform:rotate(0deg);}
+}
+
 #boat-1{
 	left: 80%;
 	top: 45%;	
@@ -266,36 +315,92 @@ li{
 .boat-icon {
 	width: 50px;
 	height: 17px;
-	background-image: url(../img/sail_event_v1/boat.png);
-	background-size: cover;
+	background-image: url(../img/sail_event_v2/boat-2.png);
+	background-size: contain;
+	background-repeat: no-repeat;
 	margin-top: -9px;
 	margin-left: -25px;
 	
+}
+
+.boat-icon:before{
+	content: '';
+	display: block;
+	position: absolute;
+	top: calc( 50% - 5px );
+	right: 3px;
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 5px 0 4px 15px;
+	border-color: transparent;
+}
+
+.boat-icon:after{
+	content: '';
+	position: absolute;
+	width: 50px;
+	height: 17px;
+	background-image: url(../img/sail_event_v2/sail.png);
+	background-size: contain;
+	background-repeat: no-repeat;
+	
+	/*-ms-transform: rotate(-45deg);
+    -ms-transform-origin: 63.7% 50%; 
+    -webkit-transform: rotate(-45deg); 
+    -webkit-transform-origin: 63.7% 50%;  */
+    transform-origin: 63.7% 50%;
+    
+	-webkit-animation-name: move-sail;
+ 	-webkit-animation-duration: 12s;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes move-sail {
+   0% {     
+	transform: rotateZ(-45deg);	
+   }
+   25% {      
+	transform: rotateZ(0deg);	
+   }
+   50% {     
+	transform: rotateZ(-45deg) rotateX(0deg);	
+   }
+   51% {     
+	transform: rotateZ(-45deg) rotateX(180deg);	
+   }
+   75% {     
+	transform: rotateZ(45deg) rotateX(180deg);	
+   }
+   99% {     
+	transform: rotateZ(-45deg) rotateX(180deg);	
+   }
 }
 
 /* labeltje van de bewegende bootjes */
 .boat-stats{
 	position: absolute;
 	display:inline-block;
-	top: -50px;
-	min-width: 135px;
+	top: -40px;
+	/*min-width: 135px;*/
 	margin-top: -12.5px;
 	margin-left: -35px;		
-	background: #fff;
+	/* background: #fff; */
 	border-radius: 15px 0 0 15px;
 	padding: 2px 3px;
 	white-space: nowrap;
-	transform: translateX( calc( -100% + 30px ) );
 }
 
 .boat-stats:after{
 	content: '';
 	position: absolute;
 	background: #fff;
-	height: 50px;
+	height: 60px;
 	width: 1px;
-	right: 0;
+	left: 33px;
 	top: 0;
+	opacity: 0.6;
 }
 
 .boat-stats div{
@@ -303,6 +408,7 @@ li{
 }
 
 .boat-stats .name{
+	display: none;
 	line-height: 24px;
 	padding: 0 15px 0 5px;
 	font-size: 12px;
@@ -322,6 +428,43 @@ li{
 	text-indent: 1;
 }
 
+/*
+* zwart		: #383838;
+* wit		: #fff;
+* blauw 	: #1b7ebc;
+* geel 		: #d1bd6d;
+* geel 		: #fec835; mooie kleur geel maar niet realistisch
+* groen		:;
+* rood		: #fe2d2d;
+*/
+
+
+#boat-1 .position {
+	background-color: #fff;
+	color: #272727;
+}
+
+#boat-2 .position {
+	background-color: #fec835;
+}
+
+#boat-3 .position{
+	background-color: #13c54c;	
+}
+
+#boat-1 .boat-icon:before{
+	border-left-color: #fff;	
+}
+
+#boat-2 .boat-icon:before{
+	border-left-color: #d1bd6d;
+	border-left-color: #fec835;
+}
+
+#boat-3 .boat-icon:before{
+	border-left-color: #13c54c;	
+}
+
 .team-flag img{
 	height: 24px;
 	width: auto;
@@ -331,15 +474,15 @@ li{
 .boat-stats .extra{
 	position: absolute;
 	top: 28px;
-	left: 20px;
+	left: 35px;
 	font-size: 14px;
-	line-height: 21px;
+	line-height: 14px;
 	overflow: hidden;
 	padding-right: 20px;
 }
 
 .boat-stats .extra p {
-	background-color: #005b7f;	
+	/* background-color: #005b7f; */	
 	padding: 3px 5px 2px 10px;
 	color: #fff;
 }
@@ -349,7 +492,7 @@ li{
 	position: absolute;
 	right: 10px;
 	top: -10px;
-	background: #005b7f;
+	/* background: #005b7f; */
 	width: 40px;
 	height: 130%;
 	z-index: -1;
@@ -381,13 +524,13 @@ li{
     position: absolute;
     font-weight: bold;
     font-size: 10px;
+    line-height: 12px;
     font-family: 'bebas_neue_book';
-    font-size: 12px;
     z-index: 1; /* buttons zijn 100 */
     top: -8px;
     left: 35px;
     opacity:0.9;
-    -moz-animation-duration: 0.1s;
+    animation-duration: 0.1s; /* TODO crossebrowser */
 }
 
 .tooltip::after {
@@ -460,6 +603,14 @@ li{
 	color: #fff;
 }
 
+#boat-overview{
+	z-index: 6;
+	position: fixed;
+	top: 63%;
+	left: 30px;
+	width: 300px;	
+}
+
 #bouy-info{
 	display: none;
 	z-index: 6;
@@ -467,15 +618,13 @@ li{
 	top: 30px;
 	left: 30px;
 	width: 300px;
-	background-repeat: no-repeat;
-	background-size: contain;
 }
 
-#bouy-info .info-bar{
+.info-list .info-bar{
 	margin-bottom: 2px;
 }
 
-#bouy-info ul li{
+.info-list ul li{
 	box-sizing: border-box;
 	display:inline-block;
 	width: 100%;
@@ -489,25 +638,24 @@ li{
 	padding: 2px 15px 2px 3px;
 }
 
-#bouy-info ul li:nth-child(1){animation-delay: 1.2s;}
-#bouy-info ul li:nth-child(2){animation-delay: 1.4s;}
-#bouy-info ul li:nth-child(3){animation-delay: 1.6s;}
-#bouy-info ul li:nth-child(4){animation-delay: 1.8s;}
-#bouy-info ul li:nth-child(5){animation-delay: 2s;}
-#bouy-info ul li:nth-child(6){animation-delay: 2.2s;}
-
-#bouy-info ul li div{
+.info-list  ul li div{
 	float: left;
 }
 
-#bouy-info ul li .name{
+.info-list ul li .name{
 	font-size: 12px;
 }
 
-#bouy-info ul li .counter{
+.info-list ul li .counter{
 	float: right;
 	font-size: 12px;
 	color: #1b7ebc;
+}
+
+#boat-overview ul li{
+	position: absolute;
+	top: 30px;
+	
 }
 
 /* grote balk onderaan het scherm */
