--- a/webroot/css/simulate_sail_event_dummy.css
+++ b/webroot/css/simulate_sail_event_dummy.css
@@ -137,9 +137,14 @@ li{
 	height: 100%;
 	width: 5%;	
 	opacity:0.6;
-	background-image: url(../img/sail_event_v2/wave.png);
+	/*background-image: url(../img/sail_event_v2/wave.png);
 	background-size: 100% 100%;	
-	
+	*/
+	background: -moz-linear-gradient(left,  rgba(255,255,255,0) 0%, rgba(237,237,237,0.08) 50%, rgba(0,0,0,0.08) 51%, rgba(0,0,0,0) 100%);
+	background: -webkit-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(237,237,237,0.08) 50%,rgba(0,0,0,0.08) 51%,rgba(0,0,0,0) 100%);
+	background: linear-gradient(to right,  rgba(255,255,255,0) 0%,rgba(237,237,237,0.08) 50%,rgba(0,0,0,0.08) 51%,rgba(0,0,0,0) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#00000000',GradientType=1 );
+		
 	-webkit-animation-name: move-waves;
  	-webkit-animation-duration: 12s;
     -webkit-animation-timing-function: linear;
