Start en penalty panel toegevoegd en ade css aparte bestanden verdeeld

--- a/webroot/css/simulate_sail_event_dummy.css
+++ b/webroot/css/simulate_sail_event_dummy.css
@@ -20,6 +20,14 @@
  *
  */
  
+@import url("./sailing-dummy/base.css"); /* general elements */
+@import url("./sailing-dummy/dashboard.css"); /* arrows, movie and logo */
+@import url("./sailing-dummy/course.css"); /* wedstrijdbaan, bouys */
+@import url("./sailing-dummy/boat.css"); /* boat-icon and boat-label */
+@import url("./sailing-dummy/info-list.css"); /* bouy-list, bouy-data, boat-overview */
+@import url("./sailing-dummy/boat-info.css"); /* horizontal bar bottom screen */
+@import url("./sailing-dummy/panel.css"); /* big panel for start and finish */
+
 @font-face {
     font-family: 'bebas_neue';
     src: url('../font/bebasneue.eot');
@@ -30,7 +38,6 @@
          url('../font/bebasneue.svg#bebas_neueregular') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
 
 @font-face {
@@ -43,938 +50,8 @@
          url('../font/bebasneue_book.svg#bebas_neueregular') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
 
-@import url("sailing-dummy/base.css");
-@import url("sailing-dummy/info-bar.css");
-@import url("sailing-dummy/parcour.css");
-@import url("sailing-dummy/boat-info.css");
-@import url("sailing-dummy/panel.css");
  
-*{
-	font-family: 'bebas_neue';
-	letter-spacing: 2px;
-	color: #272727;
-	padding: 0; 
-	margin: 0;
-} 
-
-html, body {
-	width: 100%;
-	height: 100%;
-	margin: 0px;
-	padding: 0px;
-	background-color: #06002b;
-	overflow: hidden;
-} 
-
-canvas{
-	position: fixed;
-	left: 0;
-	top: 0;	
-	z-index; 2;
-}
-
-li{
-	list-style: none;
-}
  
-.overlay{
-	background: rgba(0,0,0,0.2);
-	position: fixed;
-	height: 100%;
-	width: 100%;
-	top: 0; 
-	bottom: 0;
-	left: 0;
-	right: 0;
-	z-index: 7;
-} 
-
-#bg-movie{
-	display: none;
-	position: fixed;
-	width: 100%;
-	height: 117%;
-	top: 0; 
-	left: 0;
-	z-index: 4;
-}
- 
-/* general elements */
-.info-bar{
-	overflow: hidden;
-	border-radius: 5px 0 0 5px;
-	overflow: hidden;
-}
-
-.info-bar span{	
-	display: inline-block;
-	padding: 5px 20px;	
-}
-
-.info-bar .label{
-	background: #005b7f;
-	color: #fff;
-	position: relative;
-	z-index: 2;
-}
-
-.info-bar .label:after{
-	content: '';
-	position: absolute;
-	right: -10px;
-	top: -11px;
-	background: #005b7f;
-	width: 40px;
-	height: 130%;
-	z-index: -1;
-	transform: rotate(15deg);
-}
-
-.info-bar .counter{
-	text-align: right;
-	margin-top: 1px; /* fix chrome bug */
-	padding-left: 40px;
-	background: #fff;	
-	z-index: -1;
-}
-
-/* Simulator */
-#bouy-container,
-#height-line-container,
-#boat-container,
-#background-image {
-	width: 100%;
-	height: 100%;
-}
-
-.ease-transform{
-    transition: transform 4s ease-in-out;
-}
-
-#waves-container{
-	width: 200vw;
-	height: 200vh;
-	top: -50vh;
-	left: -50vw;
-	position: absolute;
-}
-
-.wave{
-	position: relative;
-	display:inline-block;
-	height: 100%;
-	width: 5%;	
-	opacity:0.6;
-	/*background-image: url(../img/sail_event_v2/wave.png);
-	background-size: 100% 100%;	
-	*/
-	background: -moz-linear-gradient(left,  rgba(255,255,255,0) 0%, rgba(237,237,237,0.08) 50%, rgba(0,0,0,0.08) 51%, rgba(0,0,0,0) 100%);
-	background: -webkit-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(237,237,237,0.08) 50%,rgba(0,0,0,0.08) 51%,rgba(0,0,0,0) 100%);
-	background: linear-gradient(to right,  rgba(255,255,255,0) 0%,rgba(237,237,237,0.08) 50%,rgba(0,0,0,0.08) 51%,rgba(0,0,0,0) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#00000000',GradientType=1 );
-		
-	-webkit-animation-name: move-waves;
- 	-webkit-animation-duration: 12s;
-    -webkit-animation-timing-function: linear;
-    -webkit-animation-iteration-count: infinite;
-}
-
-@-webkit-keyframes move-waves {
-   from {
-     transform: translateX(0%);
-   }
-   to { 
-     transform: translateX(200%);
-   }
-}
-
-#height-line-container{
-	z-index: 1;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	position: absolute;
-	transform: scale(1);
-}
-
-.height-line {
-	position: absolute;
-	width: 400%;
-	margin-left: -200%;
-	height: 1px; 
-	background-color: #fff;
-	opacity: 0.5;
-}
-
-/* tijdelijke laag om parcour weer te laten zien */
-#wedstrijdbaan{
-	display: none;
-	position: fixed;
-	background-image: url(../img/sail_event_v2/parcour.png);
-	background-size:contain;
-	height: 226px;
-	width: 800px;
-	top: calc( 50% - 113px );
-	left: calc( 50% - 400px );
-}
-
-#bouy-container{
-	z-index: 3;
-	position: absolute;
-	top: 0;
-	left: 0;
-	height: 100%;
-	width: 100%;	
-}
-
-#boat-container{
-	z-index: 2;
-	position: absolute;
-	top: 0;
-	left: 0;
-	height: 100%;
-	width: 100%;	
-}
-
-
-
-.bouy{
-	position: absolute;
-	width: 20px;
-	height: 20px;
-	margin-top: -10px;
-	margin-left: -10px;
-	border-radius: 50%;
-	background-color: #ffc600;
-	color: #75652e;
-    font-size: 13px;
-    text-align: center;
-    line-height: 19px;
-    text-indent: 2px;
-
-	-webkit-box-shadow: inset 5px -5px 10px 0px rgba(0,0,0,0.4);
-	-moz-box-shadow: inset 5px -5px 10px 0px rgba(0,0,0,0.2);
-	box-shadow: inset 5px -5px 5px 0px rgba(0,0,0,0.4);
-}
-
-.blue-bouy{
-	width: 15px;
-	height: 15px;
-	background: #94bced;
-} 
-
-#dummy-boat{
-	display: none;
-}
-
-.boat{
-	display: block;
-	position: relative;
-	z-index: 3;
-}
-
-.bouy.active:before{
-	content: '';
-    position: absolute;
-    height: 200px;
-    width: 200px;
-    border: 3px dashed #fec835;
-    border-radius: 50%;
-    top: -93px;
-    left: -93px;
-    animation-name: spin;
-    animation-duration: 120s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-    opacity: 0.6;
-
-}
-
-@keyframes spin {
-    from {transform:rotate(360deg);}
-    to {transform:rotate(0deg);}
-}
-
-#boat-1{
-	left: 80%;
-	top: 45%;	
-}
-
-#boat-2{
-	left: 60%;
-	top: 25%;	
-}
-
-#boat-3{
-	left: 25%;
-	top: 50%;	
-}
-
-.boat-icon {
-	width: 50px;
-	height: 17px;
-	background-image: url(../img/sail_event_v2/boat-2.png);
-	background-size: contain;
-	background-repeat: no-repeat;
-	margin-top: -9px;
-	margin-left: -25px;
-	
-}
-
-.boat-icon:before{
-	content: '';
-	display: block;
-	position: absolute;
-	top: calc( 50% - 5px );
-	right: 3px;
-	width: 0;
-	height: 0;
-	border-style: solid;
-	border-width: 5px 0 4px 15px;
-	border-color: transparent;
-}
-
-.boat-icon:after{
-	content: '';
-	position: absolute;
-	width: 50px;
-	height: 17px;
-	background-image: url(../img/sail_event_v2/sail.png);
-	background-size: contain;
-	background-repeat: no-repeat;
-	
-	/*-ms-transform: rotate(-45deg);
-    -ms-transform-origin: 63.7% 50%; 
-    -webkit-transform: rotate(-45deg); 
-    -webkit-transform-origin: 63.7% 50%;  */
-    transform-origin: 63.7% 50%;
-    
-	-webkit-animation-name: move-sail;
- 	-webkit-animation-duration: 12s;
-    -webkit-animation-timing-function: linear;
-    -webkit-animation-iteration-count: infinite;
-}
-
-@-webkit-keyframes move-sail {
-   0% {     
-	transform: rotateZ(-45deg);	
-   }
-   25% {      
-	transform: rotateZ(0deg);	
-   }
-   50% {     
-	transform: rotateZ(-45deg) rotateX(0deg);	
-   }
-   51% {     
-	transform: rotateZ(-45deg) rotateX(180deg);	
-   }
-   75% {     
-	transform: rotateZ(45deg) rotateX(180deg);	
-   }
-   99% {     
-	transform: rotateZ(-45deg) rotateX(180deg);	
-   }
-}
-
-/* labeltje van de bewegende bootjes */
-.boat-stats{
-	position: absolute;
-	display:inline-block;
-	top: -40px;
-	/*min-width: 135px;*/
-	margin-top: -12.5px;
-	margin-left: -35px;		
-	/* background: #fff; */
-	border-radius: 15px 0 0 15px;
-	padding: 2px 3px;
-	white-space: nowrap;
-}
-
-.boat-stats:after{
-	content: '';
-	position: absolute;
-	background: #fff;
-	height: 60px;
-	width: 1px;
-	left: 33px;
-	top: 0;
-	opacity: 0.6;
-}
-
-.boat-stats div{
-	float: left;
-}
-
-.boat-stats .name{
-	display: none;
-	line-height: 24px;
-	padding: 0 15px 0 5px;
-	font-size: 12px;
-	float: right;
-}
-
-.position{
-	border-radius: 50%;
-	background-color: #1b7ebc;
-	color: #fff;
-	text-align: center;
-	padding: 6px;
-	margin-top: 1px;
-	line-height: 10px;
-	height: 10px;
-	width: 10px;
-	text-indent: 1;
-}
-
-/*
-* zwart		: #383838;
-* wit		: #fff;
-* blauw 	: #1b7ebc;
-* geel 		: #d1bd6d;
-* geel 		: #fec835; mooie kleur geel maar niet realistisch
-* groen		: #13c54c;
-* rood		: #fe2d2d;
-*/
-
-
-#boat-1 .position {
-	background-color: #fff;
-	color: #272727;
-}
-
-#boat-2 .position {
-	background-color: #fec835;
-}
-
-#boat-3 .position{
-	background-color: #13c54c;	
-}
-
-#boat-1 .boat-icon:before{
-	border-left-color: #fff;	
-}
-
-#boat-2 .boat-icon:before{
-	border-left-color: #d1bd6d;
-	border-left-color: #fec835;
-}
-
-#boat-3 .boat-icon:before{
-	border-left-color: #13c54c;	
-}
-
-.team-flag img{
-	height: 24px;
-	width: auto;
-	margin:0 8px;
-}
-
-.boat-stats .extra{
-	position: absolute;
-	top: 28px;
-	left: 35px;
-	font-size: 14px;
-	line-height: 14px;
-	overflow: hidden;
-	padding-right: 20px;
-}
-
-.boat-stats .extra p {
-	/* background-color: #005b7f; */	
-	padding: 3px 5px 2px 10px;
-	color: #fff;
-}
-
-.boat-stats .extra:after{
-	content: '';
-	position: absolute;
-	right: 10px;
-	top: -10px;
-	/* background: #005b7f; */
-	width: 40px;
-	height: 130%;
-	z-index: -1;
-	transform: rotate(25deg);	
-}
-
-/* TOOLTIP */
-.bouy:hover .tooltip {
-    visibility: visible;
-    display: block;
-    font-family: 'bebas_neue_book';
-}
-
-.tooltirep {
-    position: relative;
-    display: inline-block;
-}
-
-
-.tooltip{
-    visibility: hidden;
-    display:none;
-    white-space: nowrap;
-    background-color: #222;
-    color: #fff;
-    text-align: left;
-    border-radius: 2px;
-    padding: 3px 8px;
-    position: absolute;
-    font-weight: bold;
-    font-size: 10px;
-    line-height: 12px;
-    font-family: 'bebas_neue_book';
-    z-index: 1; /* buttons zijn 100 */
-    top: -8px;
-    left: 35px;
-    opacity:0.9;
-    animation-duration: 0.1s; /* TODO crossebrowser */
-}
-
-.tooltip::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    right: 100%;
-    margin-top: -6px;
-    border-style: solid;
-    border-top: solid 5px transparent;
-    border-right: solid 6px #222;
-    border-bottom: solid 5px transparent;
-    border-left: solid 5px transparent;
-}
-
-#background-image {
-	background-image: url(../img/sail_event_v2/water.jpg);
-	background-size: cover;
-	opacity: 1;
-}
-
-/* Dashboard */
-#dashboard{
-	top: 0; 
-	left: 0;
-	right: 0; 
-	bottom: 0;
-	z-index: 5;
-}
-
-#race-time{
-	position: fixed;
-	top: 30px;
-	right: 30px;
-	z-index: 5;
-}
-
-.otis-logo{
-	position: fixed;
-	left: 30px;
-	bottom: 30px;
-	width: 120px;
-	height: auto;
-	opacity: 0.8;
-	z-index: 10;
-}
-
-#arrow-container {
-	position: fixed;
-	right: 30px;
-	top: 90px;
-	width: 85px;
-	z-index: 5;
-}
-
-.arrow{
-	color: #fff;
-	padding: 25px;
-	font-size: 14px;
-	text-indent: 1;
-	margin-bottom: 20px;
-}
-
-.arrow img{
-	position: absolute;
-	height: auto;
-	width: 55px;
-	margin: -20px 0 0 -32px;
-}
-
-.arrow-text{
-	position: absolute;
-	font-size: 10px;
-	text-align: center;
-	margin-left: -30px;
-	margin-top: 20px;
-	width: 60px;
-	color: #fff;
-}
-
-#boat-overview{
-	z-index: 6;
-	position: fixed;
-	top: 30px;
-	left: 30px;
-	width: 300px;	
-}
-
-#bouy-info{
-	display: none;
-	z-index: 6;
-	position: fixed;
-	top: 63%;
-	left: 30px;
-	width: 300px;
-}
-
-#bouy-data{
-	display: none;
-	z-index: 6;
-	position: fixed;
-	top: 30px;
-	Right: 200px;
-	width: 160px;
-}
-
-#bouy-data .position{
-	margin-right: 10px;
-}
-
-#start-panel{
-}
-
-.overlay{
-	display: none;
-}
-
-.panel{
-	position: absolute;
-	width: 80%;
-	height: 80%;
-	top: 10%;
-	left: 10%;
-	z-index: 8;
-}
-
-.panel-header{
-	width: calc( 100% - 40px );
-	padding: 10px 20px 20px 20px;
-	background: rgba(255,255,255,0.95);
-	
-	-webkit-box-shadow: 0px 0px 89px -15px rgba(0,0,0,0.65);
-	-moz-box-shadow: 0px 0px 89px -15px rgba(0,0,0,0.65);
-	box-shadow: 0px 0px 89px -15px rgba(0,0,0,0.65);
-}
-
-.panel-header img{
-	height: 50px;
-	width: auto;
-}
-
-.panel-header img:last-child{
-	height: 40px;
-	margin-top: 5px;
-	opacity: 0.8;
-}
-
-.panel .race-logo{
-}
-
-.panel .dev-logo{
-	float: right;
-}
-
-.panel h1{
-	position: absolute;
-	left: 25%;
-	top: 20px;
-	width: 50%;
-	font-size: 34px;
-	letter-spacing: 10px;
-	text-align: center;
-	color: #005b7f;
-}
-
-.panel .info-bar{
-	border-radius :0;	
-	margin-top: -10px;
-}
-
-.panel .info-bar .label{
-	width: 50%;
-}
-
-.panel.info-list ul li:nth-child(1), #bouy-data.info-list ul li:nth-child(1){
-	animation-delay: 1.4s;
-}
-
-.panel.info-list ul li:nth-child(2), #bouy-data.info-list ul li:nth-child(2){
-	animation-delay: 1.8s;
-}
-
-.panel.info-list ul li:nth-child(3), #bouy-data.info-list ul li:nth-child(3){
-	animation-delay: 2.2s;
-}
-
-.panel.info-list ul li:nth-child(4), #bouy-data.info-list ul li:nth-child(4){
-	animation-delay: 2.6s;
-}
-
-.panel.info-list ul li:nth-child(5), #bouy-data.info-list ul li:nth-child(5){
-	animation-delay: 3s;
-}
-
-.panel.info-list ul li:nth-child(6), #bouy-data.info-list ul li:nth-child(6){
-	animation-delay: 3.4s;
-}
-
-/* */
-.info-list .info-bar{
-	margin-bottom: 2px;
-}
-
-.info-list ul li{
-	box-sizing: border-box;
-	display:inline-block;
-	width: 100%;
-	top: -50px;
-	background: rgba(255,255,255,0.8);
-	border-radius: 15px 0 0 15px;
-	padding: 2px 3px;
-	white-space: nowrap;
-	margin: 2px 0;
-	line-height: 24px;
-	padding: 2px 15px 2px 3px;
-}
-
-.info-list  ul li div{
-	float: left;
-}
-
-.info-list ul li .name{
-	font-size: 12px;
-}
-
-.info-list ul li .counter{
-	float: right;
-	font-size: 12px;
-	color: #1b7ebc;
-}
-
-#boat-overview ul li{
-	position: absolute;
-	top: 30px;
-	
-}
-
-/* grote balk onderaan het scherm */
-#boat-info{
-	display: none;
-	z-index: 6;
-	position: fixed;
-	bottom: 60px;
-	left: calc( 50% - 500px );
-	width: 1000px;
-	height: 75px;
-	background-color: #fff;
-	
-	-webkit-box-shadow: inset 0px -67px 40px -23px rgba(0,0,0,0.27);
-	-moz-box-shadow: inset 0px -67px 40px -23px rgba(0,0,0,0.27);
-	box-shadow: inset 0px -67px 40px -23px rgba(0,0,0,0.27);
-}
-
-#wave-bg{
-	display: none;
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	background-image: url(../img/sail_event_v2/waves.png);
-	background-size: contain;
-	background-repeat: no-repeat;
-	background-position: bottom;
-	left: 0;
-	bottom: 0;
-	opacity: 0.6;
-	z-index: 5;
-}
-
-#boat-info .boat-data{
-	width: 33%;
-	float: left;
-	padding: 10px 20px;
-}
-
-#boat-info .boat-data .position{
-	float :left;
-	margin-right: 10px;
-	margin-bottom: 40px;
-	margin-top: 5px;
-	transform: scale(1.5);
-}
-
-#boat-info .boat-data h4{
-	font-weight: 100;
-	display: inline-block;
-	margin-right: 20px;
-	margin-left: 10px;
-	margin-top: 5px;
-	margin-bottom: 10px;
-}
-
-#boat-info .boat-data h6{
-	font-weight: 200;
-	font-family: 'bebas_neue_book';
-	font-size: 12px;
-	display: inline-block;
-	margin-right: 20px;
-}
-
-
-#boat-info .team-members{
-	width: 33%;
-	float: right;
-	text-align: right;
-	padding-top: 20px;
-}
-
-#boat-info .team-members li{
-	display: none;
-	right: 0;
-	padding-right: 125px;
-	position: absolute;
-}
-
-#boat-info .team-members h4{
-	font-size: 14px;
-    font-weight: 100;	
-}
-
-#boat-info .team-members h5{
-	font-size: 12px;
-	font-weight: 200;
-	font-family: 'bebas_neue_book';
-}
-
-#boat-info .profile-pic{
-	position: absolute;
-	border-radius: 50%;
-	height: 110px;
-	right: 0;
-	width: 110px;
-	overflow: hidden;
-	top: -50px;
-	z-index: 7;
-}
-
-#boat-info .profile-pic.straight{
-	border-radius: 0;
-}
-
-#boat-info .profile-pic img{
-	height: 100%;
-	width: auto;
-}
-
-#boat-info .team-data-container{
-	position: absolute;
-	top: 0;
-	margin: -5px;
-	height: 75px;
-	width: calc( 100% + 10px );
-	border-bottom: 10px solid #086183;
-	overflow: hidden;
-	z-index: 6;
-}
-
-#boat-info .team-data{
-	position: relative;
-	background: #086183;
-	width: 26%;
-	height: 82px;
-	padding: 10px 30px;
-	margin: 0 auto;
-	color: #fff;
-}
-
-#boat-info .team-data:before{
-	content: '';
-	position: absolute;
-	left: -12px;
-	top: -18px;
-	background: #086183;
-	width: 40px;
-	height: 130%;
-	z-index: -1;
-	transform: rotate(15deg);
-}
-
-#boat-info .team-data:after{
-	content: '';
-	position: absolute;
-	right: -12px;
-	top: -18px;
-	background: #086183;
-	width: 40px;
-	height: 130%;
-	z-index: -1;
-	transform: rotate(-15deg);
-}
-
-.team-data #medal{
-	position: relative;
-	float: left;
-	height: 25px;
-	width: 18px;
-	margin-top: 2px;
-	margin-right: 10px;
-	background-size: contain;
-	background-repeat: no-repeat;
-}
-
-#boat-info .team-data h2{
-	font-size: 16px;
-	font-weight: 100;
-	color: #fff;
-	margin-top: 6px;
-	margin-bottom: 3px;
-}
-
-#boat-info .team-data h3{
-	font-size: 11px;
-	font-weight: 100;
-	color: #fff;
-}
-
-.medal-1{
-	background-image: url(../img/sail_event_v2/medals-01.png);
-}
-
-.medal-2{
-	background-image: url(../img/sail_event_v2/medals-02.png);
-}
-
-.medal-3{
-	background-image: url(../img/sail_event_v2/medals-03.png);
-}
-
-
-#boat-info .team-data img{
-	position: absolute;
-	top: 10px;
-	height: 60px;
-	right: 5px;
-}
-
-#bouy-counter{
-	display: none;
-	position: fixed;
-	bottom: 190px;
-	border-radius: 5px 0 0 5px;
-	overflow: hidden;	
-	left: calc( 50% + 300px );
-}
-
 
