--- a/webroot/css/sailing-dummy/course.css
+++ b/webroot/css/sailing-dummy/course.css
@@ -7,7 +7,7 @@
 }
 
 #trail-container{
-	z-index: 3;
+	z-index: 2;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -102,17 +102,19 @@
 }
 
 #start{
+	display: none;
 	height: 200px;
-	position: fixed;
-	left: 80%;
-	width: 4px;
-	top: calc( 50% - 100px );
-	background-image: linear-gradient(white 50%, rgba(255,255,255,0) 0%);
-	background-position: top right;
-	background-size: 4px 10px;
-	background-repeat: repeat-y;
-	opacity: 0.6;
-	z-index: 2;
+    position: fixed;
+    left: 88.2%;
+    width: 4px;
+    top: calc( 50% - 41px );
+    background-image: linear-gradient(white 50%, rgba(255,255,255,0) 0%);
+    background-position: top right;
+    background-size: 4px 10px;
+    background-repeat: repeat-y;
+    opacity: 0.6;
+    z-index: 2;
+    transform-origin: top center;
 }
 
 #start.restricted{
@@ -138,9 +140,10 @@
 	box-shadow: inset 5px -5px 5px 0px rgba(0,0,0,0.4);
 }
 
-.blue-bouy{
+.bouy:nth-child(4),.bouy:nth-child(5){
 	width: 15px;
 	height: 15px;
+	text-indent: -99999px;
 	background: #94bced;
 } 
 
@@ -240,4 +243,5 @@
 	border-radius: 50%;
 	border-width: 2px;
 	border-style: solid;
+	z-index: 2;
 }
