--- a/webroot/css/sailing-dummy/panel.css
+++ b/webroot/css/sailing-dummy/panel.css
@@ -2,17 +2,16 @@
  * big panel for start and finish 
  */
 #start-panel{
-	display: none;
 }
 
 #finish-panel{
 	display: none;
 }
-/*
+
 #overlay{
 	display: block;
 }
-*/
+
 .panel{
 	position: absolute;
 	width: 80%;
@@ -38,9 +37,6 @@
 	width: auto;
 }
 
-.panel .race-logo{
-}
-
 .panel .dev-logo{
 	float: right;
 	height: 40px;
@@ -48,7 +44,7 @@
 	opacity: 0.8;
 }
 
-.panel h1{
+.panel .panel-header h1{
 	position: absolute;
 	left: 25%;
 	top: 20px;
@@ -71,6 +67,12 @@
 	width: 500px;
 }
 
+.panel .panel-list-title{
+    background: #fff;
+    margin-bottom: 5px;
+    padding: 5px 0;
+}
+
 .panel  .list-header span{
 	color: #fff;
 }
@@ -90,17 +92,118 @@
 	margin-left: 5px;
 }
 
-.panel.info-list ul li .name{
+.panel.info-list .crew{
+	overflow: auto;
+}
+
+.panel.info-list .crew:hover{
+	cursor: pointer;
+}
+
+.panel.info-list .crew .name{
 	font-size: 18px;
 	min-width: 30%;
 }
 
-.panel.info-list ul li .counter{
+.panel.info-list .crew .counter{
 	float: right;
 	font-size: 18px;
 	color: #272727;
 	width: 120px;
 	text-align: right;
+}
+
+.panel.info-list .crew:nth-child(1), #bouy-data.info-list ul li:nth-child(1){
+	animation-delay: 1.4s;
+}
+
+.panel.info-list .crew:nth-child(2), #bouy-data.info-list ul li:nth-child(2){
+	animation-delay: 1.8s;
+}
+
+.panel.info-list .crew:nth-child(3), #bouy-data.info-list ul li:nth-child(3){
+	animation-delay: 2.2s;
+}
+
+.panel.info-list .crew:nth-child(4), #bouy-data.info-list ul li:nth-child(4){
+	animation-delay: 2.6s;
+}
+
+.panel.info-list .crew:nth-child(5), #bouy-data.info-list ul li:nth-child(5){
+	animation-delay: 3s;
+}
+
+.panel.info-list .crew:nth-child(6), #bouy-data.info-list ul li:nth-child(6){
+	animation-delay: 3.4s;
+}
+
+.panel .extra-information{
+	display: none;
+	position: absolute;
+    float: none;
+    margin-top: 30px;
+    background: rgba(255,255,255,0.8);
+    width: calc( 100% - 40px );
+    left: 0;
+    padding: 10px 20px;
+}
+
+.panel .crew.active .extra-information{
+	display: block;
+}
+
+.panel .extra-information li{
+	display: block;
+	border-bottom: 1px solid #fff;
+	background: none;
+	border-radius: 0px;
+}
+
+.panel .extra-information li span{
+	display: inline-block;
+}
+
+.panel .extra-information li .checkpoint{
+	width: 80px;
+}
+
+.panel .extra-information .bouy{
+	display: inline-block;
+}
+
+/* customizations  */
+#finish-panel .list-header .boat-nr{
+	margin-left: 45px;
+}
+
+
+#finish-panel .list-header .name{
+	margin-left: 50px;
+}
+
+#finish-panel .ranking{
+	padding: 0 15px;
+}
+
+#finish-panel  .list-header .result{
+	padding-left: 22%;
+}
+
+#finish-panel .result{
+	width: calc( 70% - 22px - 52px - 39px - 140px - 18px - 15px - 100px );
+	text-align: right;
+}
+
+#finish-panel .difference{
+	width: 70px;
+	text-align: center;
+	padding: 0 15px;
+	opacity: 0.8;
+}
+
+#start-panel .name{
+	width:  calc( 30% + 20px );
+	display: inline-block;
 }
 
 #start-panel ul li .counter{	
@@ -111,26 +214,3 @@
 	padding-right: 20px;
 }
 
-.panel.info-list ul li:nth-child(1), #bouy-data.info-list ul li:nth-child(1){
-	animation-delay: 1.4s;
-}
-
-.panel.info-list ul li:nth-child(2), #bouy-data.info-list ul li:nth-child(2){
-	animation-delay: 1.8s;
-}
-
-.panel.info-list ul li:nth-child(3), #bouy-data.info-list ul li:nth-child(3){
-	animation-delay: 2.2s;
-}
-
-.panel.info-list ul li:nth-child(4), #bouy-data.info-list ul li:nth-child(4){
-	animation-delay: 2.6s;
-}
-
-.panel.info-list ul li:nth-child(5), #bouy-data.info-list ul li:nth-child(5){
-	animation-delay: 3s;
-}
-
-.panel.info-list ul li:nth-child(6), #bouy-data.info-list ul li:nth-child(6){
-	animation-delay: 3.4s;
-}
