--- a/webroot/css/sailing-dummy/panel.css
+++ b/webroot/css/sailing-dummy/panel.css
@@ -1,7 +1,9 @@
 /*
  * big panel for start and finish 
  */
-#start-panel{
+#start-panel, #finish-panel{
+	max-width: 900px;
+	left: calc( 50% - 450px );
 }
 
 #finish-panel{
@@ -14,8 +16,8 @@
 
 .panel{
 	position: absolute;
-	width: 80%;
-	height: 80%;
+	max-width: 80%;
+	max-height: 80%;
 	top: 10%;
 	left: 10%;
 	z-index: 8;
@@ -208,6 +210,7 @@
 
 #start-panel ul li .counter{	
 	text-align: left;
+	width: 120px;
 }
 
 #finish-panel ul li .counter{	
