--- a/webroot/css/zvdt_results/course-progress.css
+++ b/webroot/css/zvdt_results/course-progress.css
@@ -19,6 +19,7 @@
 	margin-left: -3px;
 	color: #fff;
 	font-size: 18px;
+	transform: scale(1.2);
 }
 
 /* bouy */
@@ -27,12 +28,9 @@
 }
 
 #course-track #bouy-2{
-	top: 50%;
-}
-
-#course-track #bouy-3{
 	top: 20%;
 }
+
 
 /* boat */
 #course-track #boat-1{
@@ -53,7 +51,16 @@
 
 #course-track .position{
 	position: absolute;
-	margin-left: 20px;
+	transform: scale(1.5);
+	transform-origin: left center;
+}
+
+#course-track .position.right{
+	margin-left: 23px;
+}
+
+#course-track .position.left{
+	margin-left: -43px;
 }
 
 /* colors are defined in base.css */
@@ -61,12 +68,20 @@
 	content: '';
 	display: block;
 	position: absolute;
-	margin-top: -4px;
-	margin-left: -10px;
+	margin-top: -5px;
 	width: 0;
-	height: 0;
+}
+#course-track .position.left:before{	
+	margin-left: 10px;
+	margin-top: -4.5px;
+	border-style: solid;
+	border-width: 10px 0px 10px 10px;
+	border-color: transparent;
+
+}
+#course-track .position.right:before{
+	margin-left: -10px;
 	border-style: solid;
 	border-width: 10px 10px 10px 0px;
 	border-color: transparent;
-
 }
