--- a/webroot/css/zvdt_results/course-progress.css
+++ b/webroot/css/zvdt_results/course-progress.css
@@ -1,17 +1,22 @@
 #course-progress{
+	box-sizing: border-box;
 	position: fixed;
 	right: 0;
 	top: 0;
-	width: 200px;
+	width: 180px;
 	height: 100%;
 	background: rgba(0,0,0,0.3);
+	z-index: 5;
+	padding: 30px 0px;
 }
 
 #course-track{
+	position: relative;
 	width:14px;
-	height: 100%;
+	height: 300%;
 	background: rgba(0,0,0,0.3);
-	margin-left: 90px;
+	margin-left: 80px;
+	transform: translateY(-70%);
 }
 
 #course-track .bouy{
@@ -23,35 +28,46 @@
 }
 
 /* bouy */
-#course-track #bouy-1{
-	top: 90%;
+#course-track .bouy.lijn{
+	width: 40px;
+    border-bottom: 3px dotted #fff;
+    border-radius: 0;
+    box-shadow: none;
+    height: 0;
+    background: transparent;
+    margin-top: -3px;
+    margin-left: -15px;
+    text-indent: 40px;
+    line-height: 1px;
 }
 
-#course-track #bouy-2{
-	top: 20%;
+#course-track .bouy:nth-of-type(1){
+	top: 100%;
 }
 
-
-/* boat */
-#course-track #boat-1{
-	top: 40%;
+#course-track .bouy:nth-of-type(2){
+	top: 73.7%;
 }
 
-#course-track #boat-2{
-	top: 43%;
+#course-track .bouy:nth-of-type(3){
+	top: 50%;
 }
 
-#course-track #boat-3{
-	top: 46%;
+#course-track .bouy:nth-of-type(4){
+	top: 26.3%;
 }
 
-#course-track #boat-4{
-	top: 47%;
+#course-track .bouy:nth-of-type(5){
+	top: 0%;
+}
+
+#course-track .position{
+	top: 100%;
 }
 
 #course-track .position{
 	position: absolute;
-	transform: scale(1.5);
+	transform: scale(1.5) translateY(-50%);
 	transform-origin: left center;
 }
 
