--- a/webroot/css/dummy_results/base.css
+++ b/webroot/css/dummy_results/base.css
@@ -26,6 +26,25 @@ html, body {
 	width: calc( 100% - 180px );
 }
 
+#loading-screen{
+	position: fixed;
+	top: 0;
+	left: 0; 
+	height: 100%;
+	width: 100%;
+	background: #fff;
+	z-index: 999;
+	text-align: center;
+}
+
+#loading-screen img{
+	opacity:0.5;
+	position: relative;
+	width: auto;
+	height: 100px;
+	top: calc( 50% - 50px );
+}
+
 canvas{
 	position: fixed;
 	left: 0;
