--- a/webroot/css/dummy_results/boat.css
+++ b/webroot/css/dummy_results/boat.css
@@ -30,14 +30,14 @@
 }
 
 .boat-icon {
-	position: relative;
-	width: 50px;
-	height: 17px;
+	position: absolute;
+	width: 45px;
+	height: 15px;
 	background-image: url(../../img/sail_event_v2/boat-2.png);
 	background-size: contain;
 	background-repeat: no-repeat;
-	margin-top: -9px;
-	margin-left: -25px;
+	margin-top: 0px;
+	margin-left: -30px;
 	z-index: 3;
 }
 
