--- a/webroot/css/dummy_results/course.css
+++ b/webroot/css/dummy_results/course.css
@@ -7,7 +7,7 @@
 }
 
 #trail-container{
-	z-index: 2;
+	z-index: 1;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -151,9 +151,9 @@
     top: -68px;
     left: -68px;
     animation-name: scaleUp, spin ;
-    animation-delay: 0ms, 1s;
-    animation-duration: 1s, 90s;
-    animation-iteration-count: unset, infinite;
+    animation-delay: 0ms, 2s;
+    animation-duration: 2s, 90s;
+    animation-iteration-count: infinite;
     animation-timing-function: ease-in-out, linear;
     opacity: 0.6;
     transform-origin: 50% 50%;
@@ -222,12 +222,12 @@
 .breadcrumb{
 	position: absolute;
 	opacity: 0.8;
-	margin-top: -4px;
-	margin-left: -4px;
-	height: 8px;
-	width: 8px;
+	margin-top: -2px;
+	margin-left: -2px;
+	height: 4px;
+	width: 4px;
 	border-radius: 50%;
 	border-width: 2px;
 	border-style: solid;
-	z-index: 2;
+	z-index: 1;
 }
