--- a/webroot/css/dummy_results/base.css
+++ b/webroot/css/dummy_results/base.css
@@ -34,14 +34,24 @@ html, body {
 	width: 100%;
 	background: #fff;
 	z-index: 999;
-	text-align: center;
 }
 
-#loading-screen img{
+#loading-screen img.logo{
 	position: relative;
+	display: block;
+	margin: 0 auto;
 	width: auto;
 	height: 100px;
 	top: calc( 50% - 50px );
+	-webkit-filter: drop-shadow(0px 0px 155px rgb(42, 138, 133))
+}
+
+#loading-screen img.loading{
+	position: absolute;
+	left: calc( 50% - 15px );
+	top: calc( 50% + 100px );
+	width: 30px;
+	height: 30px;
 }
 
 canvas{
