--- a/webroot/css/dummy_results/course-progress.css
+++ b/webroot/css/dummy_results/course-progress.css
@@ -17,6 +17,8 @@
 	margin-left: 80px;
 	height: 300%;
 	transform: translateY(-70%);
+	height: 100%;
+	transform: translateY(0%);
 }
 
 #course-track .bouy{
